Fixed horizontal scrollbar

--- a/css/main.scss
+++ b/css/main.scss
@@ -17,6 +17,7 @@ body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
     background: $main;
+	overflow-x: hidden;
 }
 
 h1 {
